# socialmedia

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8d0d68a9d3ff_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: all_listing.py  auth.py  comments.py  feed.py  posts.py  router.py  users.py
app/core/: config.py  logging.py  middleware.py  security.py
app/database/: base.py  session.py
app/exceptions/: base.py  handlers.py
app/models/: __init__.py  comment.py  follow.py  like.py  post.py  user.py  verification_token.py
app/repositories/: base.py  comment_repository.py  follow_repository.py  like_repository.py  post_repository.py  user_repository.py  verification_token_repository.py
app/schemas/: all_listing.py  auth.py  comment.py  common.py  follow.py  like.py  post.py  user.py
app/services/: all_listing_service.py  auth_service.py  comment_service.py  feed_service.py  follow_service.py  like_service.py  post_service.py  user_service.py  verification_service.py
app/tasks/: celery_app.py  cleanup_tasks.py  email_tasks.py
app/workers/: beat_schedule.py
tests/: conftest.py
tests/integration/: test_auth.py  test_cleanup_task.py  test_comments.py  test_feed.py  test_likes.py  test_pagination_search.py  test_posts.py  test_profile_and_all_listing.py  test_verification.py
tests/unit/: test_deps.py  test_like_service.py
