[project]
name = "socialmedia"
version = "0.1.0"
description = "Mini social network backend — FastAPI, async SQLAlchemy, Postgres, Celery."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.2",
    "celery>=5.4",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1,<4.1",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "black>=24.10",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",  # FastAPI's Depends()-in-default-argument is the framework's own DI idiom
    "UP046", # Generic[T] subclassing is kept for Pydantic generic models (Page[T])
]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
